--- a/AppProgramming.Activity1/Resources.resx
+++ b/AppProgramming.Activity1/Resources.resx
@@ -118,7 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="_0_15_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="cilidro001" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\cilidro001.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pyramid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\0_15_0.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cono001" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\cono001.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ruby_53272f15396c2222cc0f9899fd13fb9f" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ruby-53272f15396c2222cc0f9899fd13fb9f.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cubo_3d" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\cubo_3d.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Print" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Print.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
